# test_chain

./: .gitignore  .gitmodules  README.md  environment.yaml  install  test.yaml
analysis/: CMakeLists.txt  example.ipynb  spectra_hepmc3.cxx
configs/: config.yaml  input_parameters_ccake.yaml
examples/: input_ampt.yml  input_trento.yml  input_trento_fs.yml  input_trento_iccing.yml  input_trento_iccing_isobar.yml
models/analytical_cooperfrye/: Makefile  SPH.h  SPH_freezeout.h  SPH_trento.h  bessel.cpp  bessel.h  bessf.h  bessik.cpp  bessjy.cpp  cbessik.cpp  cbessjy.cpp  file.txt  fo  gamma.cpp  how_to_run.txt  int.h  main.cpp  output  readme.txt  runBSQtest.sbatch  spectra-HBT.h  submit_batches.sh  submit_single_FO_job.sh  test_SPH.h  vector.h
scripts/: run_ccake_chain.sh  run_full_job.sh  run_full_job_inidividual_modules.sh  run_wrapper.sh
test/event_1518/: config.yml
wrapper/: input.yml  main.py
wrapper/specializations/: BQSSampler_particlization.py  ICCING_overlay.py  afterdecays_afterburner.py  ampt_initial_condition.py  amptgenesis_overlay.py  analytical_particlization.py  ccake_hydro.py  freestreaming_preequilibrium.py  hepmc3_analysis.py  is3d_particlization.py  none_afterburner.py  none_analysis.py  none_hydro.py  none_initial_condition.py  none_overlay.py  none_particlization.py  none_preequilibrium.py  qvector_writter_analysis.py  smash_afterburner.py  trento_initial_condition.py
wrapper/stages/: afterburner.py  analysis.py  hydrodynamics.py  initial_condition.py  overlay.py  particlization.py  preequilibrium.py
wrapper/utils/: color_logging.py  (+4 more)
(+46 files in other folders)
